FIX: anon viewing and button alignment
This change fixes two issues:

- The vote button alignment was not correct on certain browsers
- Viewing a voting category as an anonymous user was causing an error

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -82,6 +82,8 @@
       }
 
       .topic-list-vote-button {
+        display: flex;
+        justify-content: center;
         @if $vote_from_topic_list == "false" {
           cursor: default;
         }
